--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.1",
+    "dayjs": "^1.10.5",
     "emoji-mart": "^3.0.1",
     "firebase": "^8.5.0",
     "react": "^17.0.2",
